test refactor + use junit5